# ai-native-markdown

./: .env.example  .gitignore  LICENSE  README.md  env.d.ts  index.html  package-lock.json  package.json  test-sidebar.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
design-system/: UI-UX-REDESIGN.md
docs/superpowers/plans/: 2026-05-15-knowledge-graph.md
docs/superpowers/specs/: 2026-05-10-ai-markdown-editor-design.md  2026-05-10-design-system-refactor.md  2026-05-10-file-management-design.md  2026-05-12-live-preview-checklist.md  2026-05-12-live-preview-design.md  2026-05-12-live-preview-tasks.md  2026-05-15-knowledge-graph-design.md
e2e/: sidebar.spec.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIPanel.vue  Editor.vue  FileTree.vue  FileTreeNode.vue  Preview.vue  Sidebar.vue
src/components/ai-panel/: ChatPanel.vue
src/components/editor/: OutlinePanel.vue  index.ts
src/components/file-manager/: index.ts
src/components/knowledge/: KnowledgeGraph.vue  TagBadge.vue  WikiLink.vue  index.ts
src/components/preview/: index.ts
src/components/task-scheduler/: TaskScheduler.vue
src/components/ui/: VoiceInputButton.vue
src/composables/: index.ts  useDebounce.ts  useKnowledgeGraph.ts  useResponsive.ts  useTheme.ts  useVoiceInput.ts
src/services/: ai.ts
src/stores/: editor.ts  file.ts  index.ts  settings.ts
src/types/: index.ts
src/utils/: knowledge.ts  performance.ts  security.ts
(+9 files in other folders)
