[package]
name = "ai-native-markdown"
version = "0.1.0"
description = "AI Native Markdown Editor"
authors = ["Your Name"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[features]
custom-protocol = ["tauri/custom-protocol"]
